# shared

shared/: Cargo.toml  config.json
shared/src/: config.rs  lib.rs  product.rs  request.rs  status_code.rs  utils.rs
