[package]
name = "shared"
version = "0.1.0"
authors = ["zxb870219@yeah.net <zxb870219@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mysql = "16.1"
time = "0.1.42"
once_cell = "1.2"
reqwest = "0.10"
redis = "0.13"
